Try run PDI as non-root user

--- a/.env
+++ b/.env
@@ -2,7 +2,10 @@
 PDI_IMAGE_TAG=:latest
 PDI_CONTAINER_NAME=pdi-slave
 
-PENTAHO_DI_JAVA_OPTIONS=-Xms2048m -Xmx2048m -Djava.awt.headless=true -Dpentaho.karaf.root.transient=true -XX:+HeapDumpOnOutOfMemoryError -XX:ErrorFile=./logs/jvm_error_%p.log -XX:HeapDumpPath=./logs/ -verbose:gc -Xloggc:./logs/gc.log -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintHeapAtGC
+PENTAHO_DI_JAVA_OPTIONS=-Xms2048m -Xmx2048m -Djava.awt.headless=true -Dpentaho.karaf.root.transient=true -XX:+HeapDumpOnOutOfMemoryError -XX:ErrorFile=./logs/jvm_error.log -XX:HeapDumpPath=./logs/ -verbose:gc -Xloggc:./logs/gc.log -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintHeapAtGC
+
+# add current user id(same as $UID) if you run with non-root user
+HOST_USER_ID=
 
 PDI_HADOOP_CONFIG=hdp23
 
