--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,14 @@ services:
     volumes:
       - ./ext:/pdi-ext:ro
       - ./data/logs:/data-integration/logs:rw
-      - ./data/osgi/cache:/data-integration/system/karaf/caches:rw
-      - ./data/osgi/data:/data-integration/system/karaf/data:rw
+      - ./data/cache:/data-integration/system/karaf/caches:rw
+      - ./data/data:/data-integration/system/karaf/data:rw
       - ./data/tmp:/tmp:rw
     environment:
       # uncomment below if you want to see the generated admin password
       #DEBUG: Y
       PENTAHO_DI_JAVA_OPTIONS: '${PENTAHO_DI_JAVA_OPTIONS}'
+      HOST_USER_ID: ${HOST_USER_ID}
       PDI_HADOOP_CONFIG: ${PDI_HADOOP_CONFIG}
       PDI_MAX_LOG_LINES: ${PDI_MAX_LOG_LINES}
       PDI_MAX_LOG_TIMEOUT: ${PDI_MAX_LOG_TIMEOUT}
