--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 PDI_IMAGE_TAG=:latest
 PDI_CONTAINER_NAME=pdi-slave
 
-PENTAHO_DI_JAVA_OPTIONS=-Xms2048m -Xmx2048m -Djava.awt.headless=true -Dpentaho.karaf.root.transient=true -XX:+HeapDumpOnOutOfMemoryError -XX:ErrorFile=./logs/jvm_error.log -XX:HeapDumpPath=./logs/ -verbose:gc -Xloggc:./logs/gc.log -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintHeapAtGC
+PENTAHO_DI_JAVA_OPTIONS=-Xms2048m -Xmx2048m -Djava.awt.headless=true -Dpentaho.karaf.root.transient=false -XX:ErrorFile=./logs/jvm_error.log -verbose:gc -Xloggc:./logs/gc.log -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintHeapAtGC -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=2 -XX:GCLogFileSize=64M -XX:OnOutOfMemoryError=/usr/bin/oom_killer
 
 # add current user id(same as $UID) if you run with non-root user
 HOST_USER_ID=
