--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# change to :6.1 to get PDI 6.1, or leave it blank or :latest to use the latest
-PDI_IMAGE_TAG=:latest
+# change to :7.0 to get PDI 7.0, or leave it blank or :latest to use the latest
+PDI_IMAGE_TAG=:7.0
 PDI_CONTAINER_NAME=pdi-slave
 
 PENTAHO_DI_JAVA_OPTIONS=-Xms2048m -Xmx2048m -Djava.awt.headless=true -Dpentaho.karaf.root.transient=false -XX:ErrorFile=./logs/jvm_error.log -verbose:gc -Xloggc:./logs/gc.log -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintHeapAtGC -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=2 -XX:GCLogFileSize=64M -XX:OnOutOfMemoryError=/usr/bin/oom_killer
