Enable JMX exporter

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 PDI_IMAGE_TAG=:7.1
 PDI_CONTAINER_NAME=pdi-slave
 
-PENTAHO_DI_JAVA_OPTIONS=-Xms2048m -Xmx2048m -XX:+UseG1GC -XX:+UseStringDeduplication -Djava.awt.headless=true -Dpentaho.karaf.root.transient=false -XX:ErrorFile=./logs/jvm_error.log -verbose:gc -Xloggc:./logs/gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -XX:+PrintStringDeduplicationStatistics -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=2 -XX:GCLogFileSize=64M -XX:OnOutOfMemoryError=/usr/bin/oom_killer
+PENTAHO_DI_JAVA_OPTIONS=-javaagent:/usr/local/jmx_prometheus_javaagent.jar=12345:/dev/null -Xms2048m -Xmx2048m -XX:+UseG1GC -XX:+UseStringDeduplication -Djava.awt.headless=true -Dpentaho.karaf.root.transient=false -XX:ErrorFile=./logs/jvm_error.log -verbose:gc -Xloggc:./logs/gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -XX:+PrintStringDeduplicationStatistics -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=2 -XX:GCLogFileSize=64M -XX:OnOutOfMemoryError=/usr/bin/oom_killer
 
 # add current user id(same as $UID) if you run with non-root user
 HOST_USER_ID=
